--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,29 +2,34 @@
 
 <ul class="space-y-6">
   {{#unless userEmail}}
-    <li class="text-gray-500 italic">Prijavite se kako bi mogli dodati želju...</li>
+  <li class="text-gray-500 italic">Prijavite se kako bi mogli dodati želju...</li>
   {{/unless}}
 
   {{#if userEmail}}
-  {{#each items}}
-    <li class="bg-white p-6 rounded-xl shadow-xl transition-all flex justify-between items-center">
-      
-      <div class="flex-1">
-        <h3 class="text-2xl font-semibold text-indigo-700">{{name}}</h3>
+  <ul class="space-y-4">
+    {{#each items}}
+    <li class="bg-gradient-to-r from-blue-100 to-blue-200 p-5 rounded-lg shadow-lg flex items-center justify-between">
+
+      <div class="flex items-center space-x-4">
+        <span class="text-3xl text-blue-500">💫</span>
+        <h3 class="text-xl font-bold text-blue-800">{{name}}</h3>
       </div>
 
-      <div>
-        <form method="post" action="/rooms/delete" class="py-1 px-2 bg-white text-teal-700 rounded text-sm font-normal">
-          <input type="hidden" name="id" value="{{id}}" />
-          
-          <div class="flex space-x-2">
-            <input type="submit" value="Obriši"
-              class="w-full p-3 bg-gradient-to-r from-red-500 to-red-600 text-white rounded-lg hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 transition duration-300" />
-          </div>
-        </form>
+      <div class="flex items-center space-x-2 bg-blue-100 px-3 py-1 rounded-lg shadow-sm">
+        <span class="text-blue-500 text-lg">📂</span>
+        <span class="text-sm font-semibold text-gray-700">Kategorija:</span>
+        <span class="text-sm font-medium text-blue-700">{{category}}</span>
       </div>
+
+      <form method="post" action="/rooms/delete" class="flex items-center">
+        <input type="hidden" name="id" value="{{id}}" />
+        <input type="submit" value="Obriši"
+          class="px-4 py-2 bg-red-500 text-white rounded-lg hover:bg-red-600 focus:outline-none focus:ring-2 focus:ring-red-500 transition duration-300 cursor-pointer" />
+      </form>
+
     </li>
     {{/each}}
-    {{/if}}
+  </ul>
+  {{/if}}
 
 </ul>
