--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -34,7 +34,7 @@
 
   <footer class="bg-gray-800 text-white p-4">
     <div class="container mx-auto text-center">
-      <p>&copy; 🎁 2025. Popis želja 🎁 </p>
+      <p>&copy; 🎁 Popis želja 🎁 </p>
     </div>
   </footer>
 </body>
