--- a/views/rooms/delete.hbs
+++ b/views/rooms/delete.hbs
@@ -12,7 +12,9 @@
 {{/if}}
 
 {{#if success}}
-<p>Želja je uspješno obrisana!</p>
+<p class="inline-block bg-red-100 text-red-800 px-3 py-1 rounded-lg shadow-md">
+    ✅ Želja je uspješno obrisana!
+</p>
 {{/if}}
 
 </form>
